# gcode-collision-check

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
_reference/: collision_check.py  path_sampler.py  scene_builder.py  types.py
docs/research/: g-code-collision-across-python-cpp-csharp.md  omniverse-cnc-g-code -collision.md  python-g-code-collision.md  unity-cnc-collision-detection-research.md
examples/: README.md  crash.nc  generate_vise.py  safe.nc  vise.stl
src/gcode_collision_check/: cli.py  types.py  visualize.py
src/gcode_collision_check/collision/: checker.py  sampler.py  scene.py
src/gcode_collision_check/parser/: arc_linearizer.py  gcode_parser.py  modal_state.py
src/gcode_collision_check/tool/: assembly.py  profiles.py
tests/: test_cli.py  test_collision.py  test_parser.py  test_tool.py  test_types.py  test_visualize.py
