[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcode-collision-check"
version = "0.1.0"
description = "Offline collision detection for CNC tool assemblies against a static scene, based on G-code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Lukáš Moravanský", email = "TBD@example.com" },
]
keywords = [
    "cnc", "gcode", "collision-detection", "milling",
    "cam", "manufacturing", "fcl", "trimesh",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "trimesh[easy]",
    "python-fcl",
    "numpy",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/LukasMoravansky/gcode-collision-check"
Repository = "https://github.com/LukasMoravansky/gcode-collision-check"
Issues = "https://github.com/LukasMoravansky/gcode-collision-check/issues"

[project.scripts]
gcode-collision-check = "gcode_collision_check.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gcode_collision_check"]